[build-system]
# Setuptools >=77 enables SPDX license expressions + project.license-files (PEP 639).
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlm8s-gpu"
version = "0.1.0"
description = "GPU-accelerated prototyping utilities (TensorFlow)"
readme = "README.md"
requires-python = ">=3.9"

# PEP 639 / SPDX
license = { text = "GPL-3.0-only" }
license-files = ["LICENSE*"]

keywords = ["tensorflow", "tf.data", "stateless", "rng", "reproducibility", "gpu"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "tensorflow>=2.12",
]

[project.optional-dependencies]
# Tooling
dev = [
  "pytest>=7",
  "ruff>=0.5",
]

gpu-linux = [
  "tensorflow[and-cuda]>=2.12",
]

gpu-macos = [
  "tensorflow-metal",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
